--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
 
     repositories {
         maven { url 'https://maven.google.com' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         jcenter()
     }
 }
