--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 
     compile 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
 }
 repositories {
     mavenCentral()
